css/style.css
:root {
   --dark-blue: #112240;
   --lite-gray: #8892b0;
   --white: #e6f1ff;
   --cyan: #64ffda;
   --psize: 1rem;
   --heading-family: "Montserrat";
   --p-family: "Roboto", sans-serif;
   --mono: "Roboto Mono";
}
.page_body {
   max-width: 1366px;
   margin-top: 100px;
   overflow: hidden;
}
* {
   margin: 0;
   padding: 0px;
   box-sizing: border-box;
}

body {
   background-color: #0a192f;
   overflow-x: hidden;
}
a {
   text-decoration: none;
}
header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 96px;
   background: var(--dark-blue);
   padding: 1.5rem;
   z-index: 999;
   position: sticky;
   top: 0;
   width: 100vw;
   height: 100px;
}
header .logo img {
   height: 50px;
   width: 80px;
   position: relative;
}
.header_btn {
   display: none;
}
nav ul li {
   list-style: none;
}
nav input {
   display: none;
}
nav label {
   height: 20px;
   width: 30px;
   display: block;
   cursor: pointer;
}
nav span {
   width: 30px;
   height: 4px;
   background: var(--cyan);
   display: block;
   margin-bottom: 4px;
   border-radius: 5px;
   cursor: pointer;
   position: relative;
   transform-origin: 4px 0px;

   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
}

nav ul {
   position: absolute;
   top: 100px;
   right: 0px;
   background: var(--dark-blue);
   padding: 24px 48px;
   text-align: right;
   transform: translateX(100%);
   transition: transform 0.5s ease-in;
}
nav ul li a {
   display: block;
   text-decoration: none;
   padding: 12px 0px;
   font-size: 1.5rem;
   color: var(--white);
   font-family: var(--mono);
}
nav span:first-child {
   transform-origin: 0% 0%;
}
nav span:last-child {
   transform-origin: 0% 100%;
}
#check:checked ~ ul {
   transform: translateX(0%);
   transition: transform 0.5s ease-in;
}
#check:checked ~ label span:first-child {
   transform: rotate(45deg) translate(-2px, -1px);
   transition: transform 0.5s ease-in;
}
#check:checked ~ label span:nth-child(2) {
   transform: rotate(-45deg) translate(-9px, 2px);
   transition: transform 0.5s ease-in;
}
#check:checked ~ label span:last-child {
   opacity: 0;
   transform: rotate(0deg) scale(0.2, 0.2);
}

.left-side,
.right-side {
   display: none;
}

/* Hero style */
.hero {
   text-align: center;
   margin: 0px auto 120px;
   padding: 0rem 1rem;
   overflow: hidden;
   max-width: 550px;
}
.hero span {
   font-size: var(--psize);
   font-family: var(--mono);
   font-weight: 400;
   margin-bottom: 1rem;
   color: var(--lite-gray);
   display: block;
}
.name {
   font-size: 2rem;
   color: var(--white);
   margin-bottom: 24px;
   line-height: 1;
}
.Slogan {
   font-size: 2rem;
   color: var(--lite-gray);
   margin-bottom: 24px;
   font-family: "Roboto";
   line-height: 1;
}
.hero p {
   font-size: var(--psize);
   padding: 0px 1.5rem;
   color: var(--lite-gray);
   margin-bottom: 40px;
   font-family: var(--p-family);
   line-height: 1.5;
}
.hero-button {
   font-family: var(--mono);
   font-size: 18px;
   line-height: 0.7;
   color: var(--cyan);
   text-decoration: none;
   padding: 1rem 1.5rem;
   background: none;
   border: 1px solid var(--cyan);
   border-radius: 4px;
   display: inline-block;
}

/* About Me Section */
.about {
   display: flex;
   flex-direction: column;
   position: relative;
   padding: 0rem 1.5rem;
   overflow: hidden;
   margin-bottom: 100px;
}
.textandline {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-bottom: 40px;
}
.textandline h3 {
   font-family: var(--heading-family);
   font-size: 1.5rem;
   color: var(--white);
   margin-right: 1.5rem;
}
.hl {
   height: 1px;
   background: var(--lite-gray);
   display: inline-block;
   width: 44%;
}
.about_texts p {
   font-family: var(--p-family);
   font-size: var(--psize);
   color: var(--lite-gray);
   line-height: 1.5;
   margin-bottom: 1rem;
}
.photo {
   margin: 40px auto 20px;
   position: relative;
}
.photo img {
   z-index: 3;
   position: relative;
   transform: translateX(8px);
}
.photo img,
.overlay,
.frame {
   height: 290px;
   width: 260px;
   border-radius: 5px;
}
.photo .overlay {
   background-color: var(--cyan);
   z-index: 4;
   position: absolute;
   top: 0;
   left: 0;
   opacity: 45%;
   transform: translateX(8px);
   transition: 0.5s ease-out;
}
.photo:hover .overlay {
   display: none;
   transition: 1s ease-in;
}
.frame {
   border: 3px solid var(--cyan);
   position: absolute;
   top: 0;
   left: 0;
   z-index: 2;
   transform: translate(-8px, 16px);
   opacity: 45%;
   transition: transform 0.5s ease-out;
}
.photo:hover .frame {
   transform: translate(8px, 0px);
   transition: transform 0.5s ease-out;
}

/* Expertise Section */
.expertise {
   padding: 0rem 1.5rem;
   margin-bottom: 120px;
   display: block;
   overflow: hidden;
}
.expertise_texts {
   font-size: var(--psize);
   font-family: var(--p-family);
   line-height: 1.5;
   color: var(--lite-gray);
   margin-bottom: 40px;
}
.skill_list {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 0 1rem;
}
.skill_list div li {
   font-size: var(--psize);
   font-family: var(--p-family);
   color: var(--lite-gray);
   list-style: none;
   margin-bottom: 1rem;
   display: flex;
   align-items: center;
}
.skill_list div li svg {
   font-size: 25px;
   stroke: var(--cyan);
   stroke-width: 2px;
   margin-right: 10px;
   fill: none;
}

/* Featured Project Section */
#featured_project {
   padding: 0 1.5rem;
   margin-bottom: 120px;
   padding: 0px 5vw;
}
.project_item {
   position: relative;
   height: auto;
   padding: 1.5rem;
   margin-bottom: 1.5rem;
   border-radius: 8px;
}
.project_item_1 {
   background: url(../images/Interier_Design.webp) no-repeat center;
   background-size: cover;
}
.project_item_2 {
   background: url(../images/Mobile_Repair.webp) no-repeat center;
   background-size: cover;
}
/* ... */

